--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,7 @@
 @import "../node_modules/normalize.css/normalize.css";
-
-// COLOR VARIABLES
-$color_bgc: black;
-$color_accent: rebeccapurple;
-$color_white: white;
-$color_grey: silver;
-
-// GLOBAL STYLES
 body {
   font-size: 10px;
-  color: $color_white;
+  color: white;
 }
 
 .pomodoro__background {
@@ -18,14 +10,11 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  background-color: $color_bgc;
+  background-color: black;
 }
 
-// IMPORTS
-@import "blocks/timer/timer";
+/*# sourceMappingURL=style.css.map */
