Added fonts and timer design

--- a/src/blocks/timer/timer.pug
+++ b/src/blocks/timer/timer.pug
@@ -1,2 +1,6 @@
 .timer__container.timer__circle
-    .timer__time 05:36
+    .timer__countdown
+        .text_large 05
+        .text_large.text_grey :
+        .text_large 36
+        .text_medium.text_grey 69
