--- a/src/index.pug
+++ b/src/index.pug
@@ -8,4 +8,4 @@ html
         .pomodoro__background
             .pomodoro__timer
                 include blocks/timer/timer
-            .pomodoro__tasks
+            .pomodoro__settings
